<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlMain"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:background="@drawable/background1"
        android:id="@+id/ivMain" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/ivLoginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/ic_login_top" />

        <TextView
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="@id/ivLoginTop"
            app:layout_constraintEnd_toEndOf="@id/ivLoginTop"
            app:layout_constraintStart_toStartOf="@id/ivLoginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="#ffffffff"
            android:textSize="28sp" />

        <EditText
            android:text=""
            android:id="@+id/etName"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textColorHint="#ff999999"
            android:gravity="center"
            android:hint="@string/login_username_hint"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLoginTop"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:background="@mipmap/ic_login_button" />

        <EditText
            android:text=""
            android:textSize="15sp"
            android:id="@+id/etPwd"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#ff999999"
            android:gravity="center"
            android:hint="@string/login_password_hint"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etName"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:background="@mipmap/ic_login_button" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="340dp"
            android:layout_height="55dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/etPwd"
            android:text="@string/login"
            android:background="@mipmap/ic_login_button"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvBack"
            android:drawablePadding="3dp"
            android:drawableLeft="@mipmap/ic_back_page"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:textColor="#ff000000"
            android:textSize="15sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>